# kage

./: AltTabber.spec  Kage.spec  PLAN.md  README.md  build_dmg.sh  pyproject.toml
assets/: logo.icns
examples/: config.toml
scripts/: gen_theme_previews.py
src/alttabber/: __init__.py  __main__.py
src/alttabber/backends/: base.py
src/alttabber/core/: activation.py  app.py  config.py  matcher.py  palette.py  paths.py  screens.py  settings.py  sources.py  switcher.py  theme.py  tray.py
src/alttabber/platform/macos/: accessibility.py  apps.py  chord.py  launch_at_login.py  overlay.py  windows.py
src/kage/: __init__.py  __main__.py
src/kage/backends/: base.py
src/kage/core/: app.py  config.py  matcher.py  mru.py  palette.py  paths.py  screens.py  settings.py  sources.py  switcher.py  theme.py  tray.py
src/kage/platform/macos/: accessibility.py  apps.py  chord.py  hotkeys.py  launch_at_login.py  windows.py
tests/: conftest.py  test_palette_hover.py  test_palette_mru.py
